[package]
name = "safe_gc_derive"
version = "0.0.0"
authors = ["ZainlessBrombie <mk@thepeaklab.com>"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2018"

[lib]
proc-macro = true
name = "safe_gc_derive"

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = "1.0"
synstructure = "0.12.4"


